--- a/views/injection-sequence.html
+++ b/views/injection-sequence.html
@@ -406,11 +406,11 @@
                     <label>选择仪器类型</label>
                     <div class="radio-group">
                         <div class="radio-item" data-value="84">
-                            <input type="radio" value="84" name="offset_type" id="agilent">
+                            <input type="radio" value="84" name="offset_type" id="agilent" checked>
                             <label for="agilent">安捷伦</label>
                         </div>
                         <div class="radio-item active" data-value="24">
-                            <input type="radio" value="24" name="offset_type" id="shimadzu" checked>
+                            <input type="radio" value="24" name="offset_type" id="shimadzu">
                             <label for="shimadzu">岛津</label>
                         </div>
                         <div class="radio-item" data-value="60">
