--- a/views/injection-sequence.html
+++ b/views/injection-sequence.html
@@ -405,36 +405,36 @@
                 <div id="offsetGroup">
                     <label>选择仪器类型</label>
                     <div class="radio-group">
-                        <div class="radio-item" data-value="84">
+                        <div class="radio-item active" data-value="84">
                             <input type="radio" value="84" name="offset_type" id="agilent" checked>
-                            <label for="agilent">安捷伦</label>
+                            <label for="agilent">安捷伦 (84秒)</label>
                         </div>
-                        <div class="radio-item active" data-value="24">
+                        <div class="radio-item" data-value="24">
                             <input type="radio" value="24" name="offset_type" id="shimadzu">
-                            <label for="shimadzu">岛津</label>
+                            <label for="shimadzu">岛津 (24秒)</label>
                         </div>
-                        <div class="radio-item" data-value="60">
-                            <input type="radio" value="60" name="offset_type" id="waters">
-                            <label for="waters">沃特世</label>
+                        <div class="radio-item" data-value="30">
+                            <input type="radio" value="30" name="offset_type" id="waters">
+                            <label for="waters">沃特世 (30秒)</label>
                         </div>
-                        <div class="radio-item" data-value="60">
-                            <input type="radio" value="60" name="offset_type" id="thermo">
-                            <label for="thermo">赛默飞</label>
+                        <div class="radio-item" data-value="30">
+                            <input type="radio" value="30" name="offset_type" id="thermo">
+                            <label for="thermo">赛默飞 (30秒)</label>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        
         <div class="buttons">
             <button id="ok">
                 <i class="icon icon-calc-btn"></i> 计算
             </button>
-            <button id="clear">
-                <i class="icon icon-clear"></i> 清除
-            </button>
             <button id="new_page">
                 <i class="icon icon-new"></i> 新标签页
+            </button>
+            <button id="clear">
+                <i class="icon icon-clear"></i> 清除
             </button>
         </div>
         
