--- a/views/injection-sequence.html
+++ b/views/injection-sequence.html
@@ -407,19 +407,19 @@
                     <div class="radio-group">
                         <div class="radio-item active" data-value="84">
                             <input type="radio" value="84" name="offset_type" id="agilent" checked>
-                            <label for="agilent">安捷伦 (84秒)</label>
+                            <label for="agilent">安捷伦</label>
                         </div>
                         <div class="radio-item" data-value="24">
                             <input type="radio" value="24" name="offset_type" id="shimadzu">
-                            <label for="shimadzu">岛津 (24秒)</label>
+                            <label for="shimadzu">岛津</label>
                         </div>
                         <div class="radio-item" data-value="30">
                             <input type="radio" value="30" name="offset_type" id="waters">
-                            <label for="waters">沃特世 (30秒)</label>
+                            <label for="waters">沃特世</label>
                         </div>
                         <div class="radio-item" data-value="30">
                             <input type="radio" value="30" name="offset_type" id="thermo">
-                            <label for="thermo">赛默飞 (30秒)</label>
+                            <label for="thermo">赛默飞</label>
                         </div>
                     </div>
                 </div>
