--- a/views/injection-sequence.html
+++ b/views/injection-sequence.html
@@ -411,7 +411,7 @@
                         </div>
                         <div class="radio-item" data-value="24">
                             <input type="radio" value="24" name="offset_type" id="shimadzu">
-                            <label for="shimadzu">SHIMADZU</label>
+                            <label for="shimadzu">Shimadzu</label>
                         </div>
                         <div class="radio-item" data-value="30">
                             <input type="radio" value="30" name="offset_type" id="waters">
